--- a/Account_/User_Infor_ViewController.xib
+++ b/Account_/User_Infor_ViewController.xib
@@ -33,6 +33,8 @@
                 <outlet property="sideGapLeft" destination="JV9-dS-rgd" id="7iN-Nh-1kK"/>
                 <outlet property="sideGapRight" destination="kaV-Oc-vZe" id="RnN-a2-STS"/>
                 <outlet property="tableView" destination="4r3-QZ-m1Q" id="ITc-6S-rFu"/>
+                <outlet property="totalBook" destination="wXA-U6-deV" id="Uvk-nv-yZG"/>
+                <outlet property="totalTime" destination="2Ja-RY-Bhv" id="xel-ma-dyV"/>
                 <outlet property="transaction" destination="G3K-nJ-DPE" id="hq3-1A-lex"/>
                 <outlet property="transaction_S" destination="cws-h4-Lbp" id="KYP-n9-OWJ"/>
                 <outlet property="userName" destination="ydk-pe-AEF" id="Aqa-RD-Isa"/>
@@ -243,7 +245,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wXA-U6-deV">
                                 <rect key="frame" x="8" y="88" width="184" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -263,7 +265,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="-" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ja-RY-Bhv">
                                 <rect key="frame" x="8" y="88" width="184" height="34"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <color key="textColor" red="1" green="0.4823529411764706" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
