--- a/Tabbar_/Second_Tab_ViewController.xib
+++ b/Tabbar_/Second_Tab_ViewController.xib
@@ -12,6 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Second_Tab_ViewController">
             <connections>
                 <outlet property="buyBtn" destination="UcN-iD-eMZ" id="NVi-4f-OyU"/>
+                <outlet property="login_bg_height" destination="jOy-2u-mPt" id="WEQ-Vj-BQn"/>
                 <outlet property="searchBtn" destination="u0j-Oz-Cu9" id="NEZ-JM-c0j"/>
                 <outlet property="searchView" destination="0Vg-X7-wdo" id="tlC-bR-z1P"/>
                 <outlet property="tableView" destination="Qza-1l-HTV" id="g3G-5y-vCB"/>
@@ -25,6 +26,12 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_login-1" translatesAutoresizingMaskIntoConstraints="NO" id="CB4-aE-i6V">
+                    <rect key="frame" x="0.0" y="224" width="320" height="344"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="344" id="jOy-2u-mPt"/>
+                    </constraints>
+                </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-fu-bRv">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
@@ -105,7 +112,7 @@
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Qza-1l-HTV">
                     <rect key="frame" x="0.0" y="114" width="320" height="454"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="xYj-Yf-5FQ"/>
                         <outlet property="delegate" destination="-1" id="WFg-Nv-avS"/>
@@ -132,8 +139,11 @@
             <viewLayoutGuide key="safeArea" id="W3e-U0-vWI"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="CB4-aE-i6V" firstAttribute="trailing" secondItem="W3e-U0-vWI" secondAttribute="trailing" id="4iT-c2-7iT"/>
+                <constraint firstItem="W3e-U0-vWI" firstAttribute="bottom" secondItem="CB4-aE-i6V" secondAttribute="bottom" id="BNF-sW-dyT"/>
                 <constraint firstItem="W3e-U0-vWI" firstAttribute="trailing" secondItem="UWH-fe-PkK" secondAttribute="trailing" constant="10" id="DNp-yx-xOg"/>
                 <constraint firstItem="W3e-U0-vWI" firstAttribute="trailing" secondItem="5D7-oe-ZYW" secondAttribute="trailing" constant="10" id="K7b-66-u2Y"/>
+                <constraint firstItem="CB4-aE-i6V" firstAttribute="leading" secondItem="W3e-U0-vWI" secondAttribute="leading" id="OMg-0y-UFU"/>
                 <constraint firstItem="5D7-oe-ZYW" firstAttribute="leading" secondItem="W3e-U0-vWI" secondAttribute="leading" constant="10" id="RQn-cU-myv"/>
                 <constraint firstItem="Qza-1l-HTV" firstAttribute="leading" secondItem="W3e-U0-vWI" secondAttribute="leading" id="TTn-yk-AYm"/>
                 <constraint firstItem="Gur-fu-bRv" firstAttribute="leading" secondItem="W3e-U0-vWI" secondAttribute="leading" id="Vdj-Sa-GXr"/>
@@ -150,6 +160,7 @@
         </view>
     </objects>
     <resources>
+        <image name="bg_login-1" width="266.5" height="136.5"/>
         <image name="ic_search" width="50.5" height="50.5"/>
         <image name="ico_menu" width="31.5" height="31.5"/>
         <image name="ico_vip" width="58.5" height="58.5"/>
