--- a/HT_Player_ViewController.xib
+++ b/HT_Player_ViewController.xib
@@ -399,7 +399,7 @@
                         <action selector="didPressDown" destination="-1" eventType="touchUpInside" id="1II-Aw-1J6"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTX-TR-65O">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pTX-TR-65O">
                     <rect key="frame" x="321" y="10" width="44" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="NtW-n9-LYX"/>
